ajustes de links relativos

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -152,7 +152,7 @@
 
             <div class="col-b">
 
-                <img src="assets/mulher-negra-com-roupa-verde-sorrindo.png"
+                <img src="./assets/mulher-negra-com-roupa-verde-sorrindo.png"
                     alt="Mulher negra vestindo verde e sorrindo">
             </div>
 
@@ -277,7 +277,7 @@
 
             <div class="col-b">
 
-                <img src="assets/happy-doctor-holding-a-clipboard-with-patients.png"
+                <img src="./assets/happy-doctor-holding-a-clipboard-with-patients.png"
                     alt="doutor feliz segurando uma prancheta com pacientes">
             </div>
 
@@ -332,7 +332,7 @@
             </div>
 
             <div class="col-b">
-                <img src="assets/homem-negro-com-celular-moderno-sorrindo.png"
+                <img src="./assets/homem-negro-com-celular-moderno-sorrindo.png"
                     alt="homem negro sorrindo mexendo no celular">
             </div>
 
@@ -439,7 +439,7 @@
     </a>
 
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
 </body>
 
 
